# Noise-killer

./: AudioFile.cpp  AudioFile.h  CMakeLists.txt  dio_test.pkf  eastside.pkf  el_gato.pkf  el_gato_3.pkf  el_gato_no_noise.pkf  el_gato_sn.pkf  el_gato_sn_2.pkf  fft.cpp  fft.h  homero.pkf  homero_out.pkf  main.cpp  sin_ruido.pkf  sin_ruido_2.pkf  sunflower_noise.pkf
effects/: eco_simple.cpp  eco_simple.h  effect_factory.cpp  effect_factory.h  flanger.cpp  flanger.h  generic_effect.cpp  generic_effect.h  no_effect.cpp  no_effect.h  noise_kill.cpp  noise_kill.h  reverb_allp.cpp  reverb_allp.h  reverb_cmp.cpp  reverb_cmp.h  reverb_conv.cpp  reverb_conv.h  reverb_pb.cpp  reverb_pb.h  reverb_pln.cpp  reverb_pln.h  robot.cpp  robot.h  vibrato.cpp  vibrato.h
